Fix some layout issues in default.css

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -62,12 +62,12 @@ body {
 }
 
 .branding-logo-t {
-  font-size: 1.2em; /* 24px / 24px = 1 */
+  font-size: 1.2em;
   letter-spacing: -0.17361111111em;
 }
 
 .branding-logo-anz {
-  font-size: 0.75em; /* 19px / 24px = 0.79166666666 */
+  font-size: 0.75em;
 }
 
 .branding-logo-gefuehl {
@@ -76,16 +76,17 @@ body {
 }
 
 .branding-logo-gefuehl {
-  font-size: 1.08333333333em; /* 26px / 24px = 1.08333333333 */
+  font-size: 1.08333333333em;
   font-size: 1.18em;
 }
 
 /* Navigation */
 
 .compact-nav-items {
-  display: inline;
+  display: inline-block;
   list-style: none;
   text-align: left;
+  padding-top: 0.2em;
   padding-left: 0;
   text-align: center;
 }
@@ -101,12 +102,7 @@ body {
 }
 
 .compact-nav-items li a {
-  white-space: nowrap;
-  overflow: hidden;
-  clip-path: padding-box;
   margin-left: 0;
-  margin-bottom: 0.2em;
-  display: inline-block;
   display: inline;
   font-family: "Playfair Display";
   font-weight: 600;
@@ -120,13 +116,28 @@ body {
   text-decoration: none;
 }
 
+/* Navigation item separators */
+
+.compact-nav-items li a {
+  white-space: nowrap;
+}
+
 .compact-nav-items li::after {
   content: " ";
-  letter-spacing: 1em;
+  letter-spacing: 0.4em;
   color: rgba(255, 0, 0, 0.8);
   background-color: red;
   background: content-box top center no-repeat
     url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0.5 4.6 24.5"><path d="M 0,12.25 2.25,10 4.5,12.25 2.25,14.5 Z" style="shape-rendering:geometricPrecision;" fill="%23222222"/></svg>');
+}
+
+/* Underline animations for navigation items */
+
+.compact-nav-items li a {
+  overflow: hidden;
+  clip-path: padding-box;
+  padding-top: 0.2em;
+  padding-bottom: 0.3em;
 }
 
 .compact-nav-items li a::after {
@@ -135,7 +146,7 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 0.1em;
+  height: 0.0625em;
   background-color: black;
   transition: opacity 300ms, transform 300ms;
   opacity: 0;
